# Qt3DViewer

./: .gitignore  CMakeLists.txt  Qt3DViewer.cpp  Qt3DViewer.qrc
Resources/shaders/: basic.frag  basic.vert
Resources/stls/: Sphere.stl
openmeshApps/: MeshViewerWidgetT.h  MeshViewerWidgetT_impl.h  QOpenGLViewerWidget.cpp  QOpenGLViewerWidget.h
